examples/test/testpolicy6800.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6800
  namespace: namespace48
spec:
  podSelector:
    matchLabels:
      key26: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value25
          key33: value30
          key43: value19
      podSelector:
        matchLabels:
          key38: value8
          key1: value14
